cmake_minimum_required(VERSION 3.16)
project(suricata_5_0_3)

set(CMAKE_CXX_STANDARD 14)

include_directories(ebpf)
include_directories(ebpf/include)
include_directories(ebpf/include/linux)
include_directories(libhtp/htp)
include_directories(libhtp/htp/lzma)
include_directories(libhtp/test)
include_directories(libhtp/test/fuzz)
include_directories(libhtp/test/gtest)
include_directories(rust)
include_directories(rust/gen)
include_directories(rust/gen/c-headers)
include_directories(src)

add_executable(suricata_5_0_3
        ebpf/include/linux/bpf.h
        ebpf/include/linux/bpf_common.h
        ebpf/bpf_helpers.h
        ebpf/bypass_filter.c
        ebpf/filter.c
        ebpf/hash_func01.h
        ebpf/lb.c
        ebpf/vlan_filter.c
        ebpf/xdp_filter.c
        ebpf/xdp_lb.c
        libhtp/htp/lzma/7zTypes.h
        libhtp/htp/lzma/Compiler.h
        libhtp/htp/lzma/LzFind.c
        libhtp/htp/lzma/LzFind.h
        libhtp/htp/lzma/LzHash.h
        libhtp/htp/lzma/LzmaDec.c
        libhtp/htp/lzma/LzmaDec.h
        libhtp/htp/lzma/Precomp.h
        libhtp/htp/bstr.c
        libhtp/htp/bstr.h
        libhtp/htp/bstr_builder.c
        libhtp/htp/bstr_builder.h
        libhtp/htp/htp.h
        libhtp/htp/htp_base64.c
        libhtp/htp/htp_base64.h
        libhtp/htp/htp_config.c
        libhtp/htp/htp_config.h
        libhtp/htp/htp_config_auto.h
        libhtp/htp/htp_config_private.h
        libhtp/htp/htp_connection.c
        libhtp/htp/htp_connection_parser.c
        libhtp/htp/htp_connection_parser.h
        libhtp/htp/htp_connection_parser_private.h
        libhtp/htp/htp_connection_private.h
        libhtp/htp/htp_content_handlers.c
        libhtp/htp/htp_cookies.c
        libhtp/htp/htp_core.h
        libhtp/htp/htp_decompressors.c
        libhtp/htp/htp_decompressors.h
        libhtp/htp/htp_hooks.c
        libhtp/htp/htp_hooks.h
        libhtp/htp/htp_list.c
        libhtp/htp/htp_list.h
        libhtp/htp/htp_list_private.h
        libhtp/htp/htp_multipart.c
        libhtp/htp/htp_multipart.h
        libhtp/htp/htp_multipart_private.h
        libhtp/htp/htp_parsers.c
        libhtp/htp/htp_php.c
        libhtp/htp/htp_private.h
        libhtp/htp/htp_request.c
        libhtp/htp/htp_request_apache_2_2.c
        libhtp/htp/htp_request_generic.c
        libhtp/htp/htp_request_parsers.c
        libhtp/htp/htp_response.c
        libhtp/htp/htp_response_generic.c
        libhtp/htp/htp_table.c
        libhtp/htp/htp_table.h
        libhtp/htp/htp_table_private.h
        libhtp/htp/htp_transaction.c
        libhtp/htp/htp_transaction.h
        libhtp/htp/htp_transcoder.c
        libhtp/htp/htp_urlencoded.c
        libhtp/htp/htp_urlencoded.h
        libhtp/htp/htp_utf8_decoder.c
        libhtp/htp/htp_utf8_decoder.h
        libhtp/htp/htp_util.c
        libhtp/htp/htp_version.h
        libhtp/htp/strlcat.c
        libhtp/htp/strlcpy.c
        libhtp/test/fuzz/fuzz_htp.c
        libhtp/test/fuzz/fuzz_htp.h
        libhtp/test/fuzz/onefile.c
        libhtp/test/gtest/gtest-all.cc
        libhtp/test/gtest/gtest.h
        libhtp/test/gtest/gtest_main.cc
        libhtp/test/test.c
        libhtp/test/test.h
        libhtp/test/test_bench.cpp
        libhtp/test/test_bstr.cpp
        libhtp/test/test_gunzip.cpp
        libhtp/test/test_hybrid.cpp
        libhtp/test/test_main.cpp
        libhtp/test/test_multipart.cpp
        libhtp/test/test_utils.cpp
        rust/gen/c-headers/rust-applayertemplate-logger-gen.h
        rust/gen/c-headers/rust-applayertemplate-template-gen.h
        rust/gen/c-headers/rust-core-gen.h
        rust/gen/c-headers/rust-dhcp-dhcp-gen.h
        rust/gen/c-headers/rust-dhcp-logger-gen.h
        rust/gen/c-headers/rust-dns-detect-gen.h
        rust/gen/c-headers/rust-dns-dns-gen.h
        rust/gen/c-headers/rust-dns-log-gen.h
        rust/gen/c-headers/rust-dns-lua-gen.h
        rust/gen/c-headers/rust-ftp-mod-gen.h
        rust/gen/c-headers/rust-ikev2-ikev2-gen.h
        rust/gen/c-headers/rust-ikev2-log-gen.h
        rust/gen/c-headers/rust-krb-detect-gen.h
        rust/gen/c-headers/rust-krb-krb5-gen.h
        rust/gen/c-headers/rust-krb-log-gen.h
        rust/gen/c-headers/rust-log-gen.h
        rust/gen/c-headers/rust-nfs-log-gen.h
        rust/gen/c-headers/rust-nfs-nfs-gen.h
        rust/gen/c-headers/rust-ntp-ntp-gen.h
        rust/gen/c-headers/rust-rdp-log-gen.h
        rust/gen/c-headers/rust-rdp-rdp-gen.h
        rust/gen/c-headers/rust-sip-detect-gen.h
        rust/gen/c-headers/rust-sip-log-gen.h
        rust/gen/c-headers/rust-sip-sip-gen.h
        rust/gen/c-headers/rust-smb-detect-gen.h
        rust/gen/c-headers/rust-smb-files-gen.h
        rust/gen/c-headers/rust-smb-log-gen.h
        rust/gen/c-headers/rust-smb-smb-gen.h
        rust/gen/c-headers/rust-snmp-detect-gen.h
        rust/gen/c-headers/rust-snmp-log-gen.h
        rust/gen/c-headers/rust-snmp-snmp-gen.h
        rust/gen/c-headers/rust-tftp-log-gen.h
        rust/gen/c-headers/rust-tftp-tftp-gen.h
        src/tests/app-layer-htp-file.c
        src/tests/detect-bsize.c
        src/tests/detect-engine-content-inspection.c
        src/tests/detect-file-data.c
        src/tests/detect-http-client-body.c
        src/tests/detect-http-cookie.c
        src/tests/detect-http-header.c
        src/tests/detect-http-host.c
        src/tests/detect-http-method.c
        src/tests/detect-http-raw-header.c
        src/tests/detect-http-server-body.c
        src/tests/detect-http-stat-code.c
        src/tests/detect-http-stat-msg.c
        src/tests/detect-http-uri.c
        src/tests/detect-http-user-agent.c
        src/tests/detect-ipv4hdr.c
        src/tests/detect-ipv6hdr.c
        src/tests/detect-parse.c
        src/tests/detect-snmp-community.c
        src/tests/detect-snmp-pdu_type.c
        src/tests/detect-snmp-version.c
        src/tests/detect-ssl-state.c
        src/tests/detect-ssl-version.c
        src/tests/detect-tcphdr.c
        src/tests/detect-tcpmss.c
        src/tests/detect-template-buffer.c
        src/tests/detect-template.c
        src/tests/detect-template2.c
        src/tests/detect-tls-cert-fingerprint.c
        src/tests/detect-tls-cert-issuer.c
        src/tests/detect-tls-cert-serial.c
        src/tests/detect-tls-cert-subject.c
        src/tests/detect-tls-cert-validity.c
        src/tests/detect-tls-certs.c
        src/tests/detect-tls-ja3-hash.c
        src/tests/detect-tls-ja3-string.c
        src/tests/detect-tls-ja3s-hash.c
        src/tests/detect-tls-ja3s-string.c
        src/tests/detect-tls-sni.c
        src/tests/detect-tls-version.c
        src/tests/detect-ttl.c
        src/tests/detect-udphdr.c
        src/tests/detect.c
        src/tests/reputation.c
        src/tests/stream-tcp-inline.c
        src/tests/stream-tcp-list.c
        src/tests/stream-tcp-reassemble.c
        src/action-globals.h
        src/alert-debuglog.c
        src/alert-debuglog.h
        src/alert-fastlog.c
        src/alert-fastlog.h
        src/alert-prelude.c
        src/alert-prelude.h
        src/alert-syslog.c
        src/alert-syslog.h
        src/alert-unified2-alert.c
        src/alert-unified2-alert.h
        src/app-layer-dcerpc-common.h
        src/app-layer-dcerpc-udp.c
        src/app-layer-dcerpc-udp.h
        src/app-layer-dcerpc.c
        src/app-layer-dcerpc.h
        src/app-layer-detect-proto.c
        src/app-layer-detect-proto.h
        src/app-layer-dhcp.c
        src/app-layer-dhcp.h
        src/app-layer-dnp3-objects.c
        src/app-layer-dnp3-objects.h
        src/app-layer-dnp3.c
        src/app-layer-dnp3.h
        src/app-layer-dns-common.c
        src/app-layer-dns-common.h
        src/app-layer-dns-tcp.c
        src/app-layer-dns-tcp.h
        src/app-layer-dns-udp.c
        src/app-layer-dns-udp.h
        src/app-layer-enip-common.c
        src/app-layer-enip-common.h
        src/app-layer-enip.c
        src/app-layer-enip.h
        src/app-layer-events.c
        src/app-layer-events.h
        src/app-layer-expectation.c
        src/app-layer-expectation.h
        src/app-layer-ftp.c
        src/app-layer-ftp.h
        src/app-layer-htp-body.c
        src/app-layer-htp-body.h
        src/app-layer-htp-file.c
        src/app-layer-htp-file.h
        src/app-layer-htp-libhtp.c
        src/app-layer-htp-libhtp.h
        src/app-layer-htp-mem.c
        src/app-layer-htp-mem.h
        src/app-layer-htp-xff.c
        src/app-layer-htp-xff.h
        src/app-layer-htp.c
        src/app-layer-htp.h
        src/app-layer-ikev2.c
        src/app-layer-ikev2.h
        src/app-layer-krb5.c
        src/app-layer-krb5.h
        src/app-layer-modbus.c
        src/app-layer-modbus.h
        src/app-layer-nbss.h
        src/app-layer-nfs-tcp.c
        src/app-layer-nfs-tcp.h
        src/app-layer-nfs-udp.c
        src/app-layer-nfs-udp.h
        src/app-layer-ntp.c
        src/app-layer-ntp.h
        src/app-layer-parser.c
        src/app-layer-parser.h
        src/app-layer-protos.c
        src/app-layer-protos.h
        src/app-layer-rdp.c
        src/app-layer-rdp.h
        src/app-layer-register.c
        src/app-layer-register.h
        src/app-layer-sip.c
        src/app-layer-sip.h
        src/app-layer-smb.c
        src/app-layer-smb.h
        src/app-layer-smtp.c
        src/app-layer-smtp.h
        src/app-layer-snmp.c
        src/app-layer-snmp.h
        src/app-layer-ssh.c
        src/app-layer-ssh.h
        src/app-layer-ssl.c
        src/app-layer-ssl.h
        src/app-layer-template-rust.c
        src/app-layer-template-rust.h
        src/app-layer-template.c
        src/app-layer-template.h
        src/app-layer-tftp.c
        src/app-layer-tftp.h
        src/app-layer.c
        src/app-layer.h
        src/conf-yaml-loader.c
        src/conf-yaml-loader.h
        src/conf.c
        src/conf.h
        src/counters.c
        src/counters.h
        src/datasets-md5.c
        src/datasets-md5.h
        src/datasets-reputation.h
        src/datasets-sha256.c
        src/datasets-sha256.h
        src/datasets-string.c
        src/datasets-string.h
        src/datasets.c
        src/datasets.h
        src/debug.h
        src/decode-afl.c
        src/decode-erspan.c
        src/decode-erspan.h
        src/decode-ethernet.c
        src/decode-ethernet.h
        src/decode-events.c
        src/decode-events.h
        src/decode-gre.c
        src/decode-gre.h
        src/decode-icmpv4.c
        src/decode-icmpv4.h
        src/decode-icmpv6.c
        src/decode-icmpv6.h
        src/decode-ipv4.c
        src/decode-ipv4.h
        src/decode-ipv6.c
        src/decode-ipv6.h
        src/decode-mpls.c
        src/decode-mpls.h
        src/decode-null.c
        src/decode-null.h
        src/decode-ppp.c
        src/decode-ppp.h
        src/decode-pppoe.c
        src/decode-pppoe.h
        src/decode-raw.c
        src/decode-raw.h
        src/decode-sctp.c
        src/decode-sctp.h
        src/decode-sll.c
        src/decode-sll.h
        src/decode-tcp.c
        src/decode-tcp.h
        src/decode-template.c
        src/decode-template.h
        src/decode-teredo.c
        src/decode-teredo.h
        src/decode-udp.c
        src/decode-udp.h
        src/decode-vlan.c
        src/decode-vlan.h
        src/decode-vxlan.c
        src/decode-vxlan.h
        src/decode.c
        src/decode.h
        src/defrag-config.c
        src/defrag-config.h
        src/defrag-hash.c
        src/defrag-hash.h
        src/defrag-queue.c
        src/defrag-queue.h
        src/defrag-timeout.c
        src/defrag-timeout.h
        src/defrag.c
        src/defrag.h
        src/detect-app-layer-event.c
        src/detect-app-layer-event.h
        src/detect-app-layer-protocol.c
        src/detect-app-layer-protocol.h
        src/detect-asn1.c
        src/detect-asn1.h
        src/detect-base64-data.c
        src/detect-base64-data.h
        src/detect-base64-decode.c
        src/detect-base64-decode.h
        src/detect-bsize.c
        src/detect-bsize.h
        src/detect-bypass.c
        src/detect-bypass.h
        src/detect-byte-extract.c
        src/detect-byte-extract.h
        src/detect-bytejump.c
        src/detect-bytejump.h
        src/detect-bytetest.c
        src/detect-bytetest.h
        src/detect-cipservice.c
        src/detect-cipservice.h
        src/detect-classtype.c
        src/detect-classtype.h
        src/detect-content.c
        src/detect-content.h
        src/detect-csum.c
        src/detect-csum.h
        src/detect-datarep.c
        src/detect-datarep.h
        src/detect-dataset.c
        src/detect-dataset.h
        src/detect-dce-iface.c
        src/detect-dce-iface.h
        src/detect-dce-opnum.c
        src/detect-dce-opnum.h
        src/detect-dce-stub-data.c
        src/detect-dce-stub-data.h
        src/detect-depth.c
        src/detect-depth.h
        src/detect-detection-filter.c
        src/detect-detection-filter.h
        src/detect-distance.c
        src/detect-distance.h
        src/detect-dnp3.c
        src/detect-dnp3.h
        src/detect-dns-opcode.c
        src/detect-dns-opcode.h
        src/detect-dns-query.c
        src/detect-dns-query.h
        src/detect-dsize.c
        src/detect-dsize.h
        src/detect-engine-address-ipv4.c
        src/detect-engine-address-ipv4.h
        src/detect-engine-address-ipv6.c
        src/detect-engine-address-ipv6.h
        src/detect-engine-address.c
        src/detect-engine-address.h
        src/detect-engine-alert.c
        src/detect-engine-alert.h
        src/detect-engine-analyzer.c
        src/detect-engine-analyzer.h
        src/detect-engine-build.c
        src/detect-engine-build.h
        src/detect-engine-content-inspection.c
        src/detect-engine-content-inspection.h
        src/detect-engine-dcepayload.c
        src/detect-engine-dcepayload.h
        src/detect-engine-dns.c
        src/detect-engine-dns.h
        src/detect-engine-enip.c
        src/detect-engine-enip.h
        src/detect-engine-event.c
        src/detect-engine-event.h
        src/detect-engine-file.c
        src/detect-engine-file.h
        src/detect-engine-iponly.c
        src/detect-engine-iponly.h
        src/detect-engine-loader.c
        src/detect-engine-loader.h
        src/detect-engine-modbus.c
        src/detect-engine-modbus.h
        src/detect-engine-mpm.c
        src/detect-engine-mpm.h
        src/detect-engine-payload.c
        src/detect-engine-payload.h
        src/detect-engine-port.c
        src/detect-engine-port.h
        src/detect-engine-prefilter-common.c
        src/detect-engine-prefilter-common.h
        src/detect-engine-prefilter.c
        src/detect-engine-prefilter.h
        src/detect-engine-profile.c
        src/detect-engine-profile.h
        src/detect-engine-proto.c
        src/detect-engine-proto.h
        src/detect-engine-register.c
        src/detect-engine-register.h
        src/detect-engine-siggroup.c
        src/detect-engine-siggroup.h
        src/detect-engine-sigorder.c
        src/detect-engine-sigorder.h
        src/detect-engine-state.c
        src/detect-engine-state.h
        src/detect-engine-tag.c
        src/detect-engine-tag.h
        src/detect-engine-threshold.c
        src/detect-engine-threshold.h
        src/detect-engine.c
        src/detect-engine.h
        src/detect-fast-pattern.c
        src/detect-fast-pattern.h
        src/detect-file-data.c
        src/detect-file-data.h
        src/detect-file-hash-common.c
        src/detect-file-hash-common.h
        src/detect-fileext.c
        src/detect-fileext.h
        src/detect-filemagic.c
        src/detect-filemagic.h
        src/detect-filemd5.c
        src/detect-filemd5.h
        src/detect-filename.c
        src/detect-filename.h
        src/detect-filesha1.c
        src/detect-filesha1.h
        src/detect-filesha256.c
        src/detect-filesha256.h
        src/detect-filesize.c
        src/detect-filesize.h
        src/detect-filestore.c
        src/detect-filestore.h
        src/detect-flow.c
        src/detect-flow.h
        src/detect-flowbits.c
        src/detect-flowbits.h
        src/detect-flowint.c
        src/detect-flowint.h
        src/detect-flowvar.c
        src/detect-flowvar.h
        src/detect-fragbits.c
        src/detect-fragbits.h
        src/detect-fragoffset.c
        src/detect-fragoffset.h
        src/detect-ftpbounce.c
        src/detect-ftpbounce.h
        src/detect-ftpdata.c
        src/detect-ftpdata.h
        src/detect-geoip.c
        src/detect-geoip.h
        src/detect-gid.c
        src/detect-gid.h
        src/detect-hostbits.c
        src/detect-hostbits.h
        src/detect-http-accept-enc.c
        src/detect-http-accept-enc.h
        src/detect-http-accept-lang.c
        src/detect-http-accept-lang.h
        src/detect-http-accept.c
        src/detect-http-accept.h
        src/detect-http-client-body.c
        src/detect-http-client-body.h
        src/detect-http-connection.c
        src/detect-http-connection.h
        src/detect-http-content-len.c
        src/detect-http-content-len.h
        src/detect-http-content-type.c
        src/detect-http-content-type.h
        src/detect-http-cookie.c
        src/detect-http-cookie.h
        src/detect-http-header-common.c
        src/detect-http-header-common.h
        src/detect-http-header-names.c
        src/detect-http-header-names.h
        src/detect-http-header.c
        src/detect-http-header.h
        src/detect-http-headers-stub.h
        src/detect-http-headers.c
        src/detect-http-headers.h
        src/detect-http-host.c
        src/detect-http-host.h
        src/detect-http-location.c
        src/detect-http-location.h
        src/detect-http-method.c
        src/detect-http-method.h
        src/detect-http-protocol.c
        src/detect-http-protocol.h
        src/detect-http-raw-header.c
        src/detect-http-raw-header.h
        src/detect-http-referer.c
        src/detect-http-referer.h
        src/detect-http-request-line.c
        src/detect-http-request-line.h
        src/detect-http-response-line.c
        src/detect-http-response-line.h
        src/detect-http-server-body.c
        src/detect-http-server-body.h
        src/detect-http-server.c
        src/detect-http-server.h
        src/detect-http-start.c
        src/detect-http-start.h
        src/detect-http-stat-code.c
        src/detect-http-stat-code.h
        src/detect-http-stat-msg.c
        src/detect-http-stat-msg.h
        src/detect-http-ua.c
        src/detect-http-ua.h
        src/detect-http-uri.c
        src/detect-http-uri.h
        src/detect-icmp-id.c
        src/detect-icmp-id.h
        src/detect-icmp-seq.c
        src/detect-icmp-seq.h
        src/detect-icode.c
        src/detect-icode.h
        src/detect-id.c
        src/detect-id.h
        src/detect-ipopts.c
        src/detect-ipopts.h
        src/detect-ipproto.c
        src/detect-ipproto.h
        src/detect-iprep.c
        src/detect-iprep.h
        src/detect-ipv4hdr.c
        src/detect-ipv4hdr.h
        src/detect-ipv6hdr.c
        src/detect-ipv6hdr.h
        src/detect-isdataat.c
        src/detect-isdataat.h
        src/detect-itype.c
        src/detect-itype.h
        src/detect-krb5-cname.c
        src/detect-krb5-cname.h
        src/detect-krb5-errcode.c
        src/detect-krb5-errcode.h
        src/detect-krb5-msgtype.c
        src/detect-krb5-msgtype.h
        src/detect-krb5-sname.c
        src/detect-krb5-sname.h
        src/detect-l3proto.c
        src/detect-l3proto.h
        src/detect-lua-extensions.c
        src/detect-lua-extensions.h
        src/detect-lua.c
        src/detect-lua.h
        src/detect-mark.c
        src/detect-mark.h
        src/detect-metadata.c
        src/detect-metadata.h
        src/detect-modbus.c
        src/detect-modbus.h
        src/detect-msg.c
        src/detect-msg.h
        src/detect-nfs-procedure.c
        src/detect-nfs-procedure.h
        src/detect-nfs-version.c
        src/detect-nfs-version.h
        src/detect-noalert.c
        src/detect-noalert.h
        src/detect-nocase.c
        src/detect-nocase.h
        src/detect-offset.c
        src/detect-offset.h
        src/detect-parse.c
        src/detect-parse.h
        src/detect-pcre.c
        src/detect-pcre.h
        src/detect-pkt-data.c
        src/detect-pkt-data.h
        src/detect-pktvar.c
        src/detect-pktvar.h
        src/detect-prefilter.c
        src/detect-prefilter.h
        src/detect-priority.c
        src/detect-priority.h
        src/detect-rawbytes.c
        src/detect-rawbytes.h
        src/detect-reference.c
        src/detect-reference.h
        src/detect-replace.c
        src/detect-replace.h
        src/detect-rev.c
        src/detect-rev.h
        src/detect-rpc.c
        src/detect-rpc.h
        src/detect-sameip.c
        src/detect-sameip.h
        src/detect-sid.c
        src/detect-sid.h
        src/detect-sip-method.c
        src/detect-sip-method.h
        src/detect-sip-protocol.c
        src/detect-sip-protocol.h
        src/detect-sip-request-line.c
        src/detect-sip-request-line.h
        src/detect-sip-response-line.c
        src/detect-sip-response-line.h
        src/detect-sip-stat-code.c
        src/detect-sip-stat-code.h
        src/detect-sip-stat-msg.c
        src/detect-sip-stat-msg.h
        src/detect-sip-uri.c
        src/detect-sip-uri.h
        src/detect-smb-share.c
        src/detect-smb-share.h
        src/detect-snmp-community.c
        src/detect-snmp-community.h
        src/detect-snmp-pdu_type.c
        src/detect-snmp-pdu_type.h
        src/detect-snmp-version.c
        src/detect-snmp-version.h
        src/detect-ssh-proto-version.c
        src/detect-ssh-proto-version.h
        src/detect-ssh-proto.c
        src/detect-ssh-proto.h
        src/detect-ssh-software-version.c
        src/detect-ssh-software-version.h
        src/detect-ssh-software.c
        src/detect-ssh-software.h
        src/detect-ssl-state.c
        src/detect-ssl-state.h
        src/detect-ssl-version.c
        src/detect-ssl-version.h
        src/detect-stream_size.c
        src/detect-stream_size.h
        src/detect-tag.c
        src/detect-tag.h
        src/detect-target.c
        src/detect-target.h
        src/detect-tcp-ack.c
        src/detect-tcp-ack.h
        src/detect-tcp-flags.c
        src/detect-tcp-flags.h
        src/detect-tcp-seq.c
        src/detect-tcp-seq.h
        src/detect-tcp-window.c
        src/detect-tcp-window.h
        src/detect-tcphdr.c
        src/detect-tcphdr.h
        src/detect-tcpmss.c
        src/detect-tcpmss.h
        src/detect-template-buffer.c
        src/detect-template-buffer.h
        src/detect-template-rust-buffer.c
        src/detect-template-rust-buffer.h
        src/detect-template.c
        src/detect-template.h
        src/detect-template2.c
        src/detect-template2.h
        src/detect-threshold.c
        src/detect-threshold.h
        src/detect-tls-cert-fingerprint.c
        src/detect-tls-cert-fingerprint.h
        src/detect-tls-cert-issuer.c
        src/detect-tls-cert-issuer.h
        src/detect-tls-cert-serial.c
        src/detect-tls-cert-serial.h
        src/detect-tls-cert-subject.c
        src/detect-tls-cert-subject.h
        src/detect-tls-cert-validity.c
        src/detect-tls-cert-validity.h
        src/detect-tls-certs.c
        src/detect-tls-certs.h
        src/detect-tls-ja3-hash.c
        src/detect-tls-ja3-hash.h
        src/detect-tls-ja3-string.c
        src/detect-tls-ja3-string.h
        src/detect-tls-ja3s-hash.c
        src/detect-tls-ja3s-hash.h
        src/detect-tls-ja3s-string.c
        src/detect-tls-ja3s-string.h
        src/detect-tls-sni.c
        src/detect-tls-sni.h
        src/detect-tls-version.c
        src/detect-tls-version.h
        src/detect-tls.c
        src/detect-tls.h
        src/detect-tos.c
        src/detect-tos.h
        src/detect-transform-compress-whitespace.c
        src/detect-transform-compress-whitespace.h
        src/detect-transform-dotprefix.c
        src/detect-transform-dotprefix.h
        src/detect-transform-md5.c
        src/detect-transform-md5.h
        src/detect-transform-sha1.c
        src/detect-transform-sha1.h
        src/detect-transform-sha256.c
        src/detect-transform-sha256.h
        src/detect-transform-strip-whitespace.c
        src/detect-transform-strip-whitespace.h
        src/detect-ttl.c
        src/detect-ttl.h
        src/detect-udphdr.c
        src/detect-udphdr.h
        src/detect-uricontent.c
        src/detect-uricontent.h
        src/detect-urilen.c
        src/detect-urilen.h
        src/detect-within.c
        src/detect-within.h
        src/detect-xbits.c
        src/detect-xbits.h
        src/detect.c
        src/detect.h
        src/device-storage.c
        src/device-storage.h
        src/flow-bit.c
        src/flow-bit.h
        src/flow-bypass.c
        src/flow-bypass.h
        src/flow-hash.c
        src/flow-hash.h
        src/flow-manager.c
        src/flow-manager.h
        src/flow-private.h
        src/flow-queue.c
        src/flow-queue.h
        src/flow-storage.c
        src/flow-storage.h
        src/flow-timeout.c
        src/flow-timeout.h
        src/flow-util.c
        src/flow-util.h
        src/flow-var.c
        src/flow-var.h
        src/flow-worker.c
        src/flow-worker.h
        src/flow.c
        src/flow.h
        src/host-bit.c
        src/host-bit.h
        src/host-queue.c
        src/host-queue.h
        src/host-storage.c
        src/host-storage.h
        src/host-timeout.c
        src/host-timeout.h
        src/host.c
        src/host.h
        src/ippair-bit.c
        src/ippair-bit.h
        src/ippair-queue.c
        src/ippair-queue.h
        src/ippair-storage.c
        src/ippair-storage.h
        src/ippair-timeout.c
        src/ippair-timeout.h
        src/ippair.c
        src/ippair.h
        src/log-cf-common.c
        src/log-cf-common.h
        src/log-droplog.c
        src/log-droplog.h
        src/log-filestore.c
        src/log-filestore.h
        src/log-httplog.c
        src/log-httplog.h
        src/log-pcap.c
        src/log-pcap.h
        src/log-stats.c
        src/log-stats.h
        src/log-tcp-data.c
        src/log-tcp-data.h
        src/log-tlslog.c
        src/log-tlslog.h
        src/log-tlsstore.c
        src/log-tlsstore.h
        src/output-file.c
        src/output-file.h
        src/output-filedata.c
        src/output-filedata.h
        src/output-filestore.c
        src/output-filestore.h
        src/output-flow.c
        src/output-flow.h
        src/output-json-alert.c
        src/output-json-alert.h
        src/output-json-anomaly.c
        src/output-json-anomaly.h
        src/output-json-common.c
        src/output-json-dhcp.c
        src/output-json-dhcp.h
        src/output-json-dnp3-objects.c
        src/output-json-dnp3-objects.h
        src/output-json-dnp3.c
        src/output-json-dnp3.h
        src/output-json-dns.c
        src/output-json-dns.h
        src/output-json-drop.c
        src/output-json-drop.h
        src/output-json-email-common.c
        src/output-json-email-common.h
        src/output-json-file.c
        src/output-json-file.h
        src/output-json-flow.c
        src/output-json-flow.h
        src/output-json-ftp.c
        src/output-json-ftp.h
        src/output-json-http.c
        src/output-json-http.h
        src/output-json-ikev2.c
        src/output-json-ikev2.h
        src/output-json-krb5.c
        src/output-json-krb5.h
        src/output-json-metadata.c
        src/output-json-metadata.h
        src/output-json-netflow.c
        src/output-json-netflow.h
        src/output-json-nfs.c
        src/output-json-nfs.h
        src/output-json-rdp.c
        src/output-json-rdp.h
        src/output-json-sip.c
        src/output-json-sip.h
        src/output-json-smb.c
        src/output-json-smb.h
        src/output-json-smtp.c
        src/output-json-smtp.h
        src/output-json-snmp.c
        src/output-json-snmp.h
        src/output-json-ssh.c
        src/output-json-ssh.h
        src/output-json-stats.c
        src/output-json-stats.h
        src/output-json-template-rust.c
        src/output-json-template-rust.h
        src/output-json-template.c
        src/output-json-template.h
        src/output-json-tftp.c
        src/output-json-tftp.h
        src/output-json-tls.c
        src/output-json-tls.h
        src/output-json.c
        src/output-json.h
        src/output-lua.c
        src/output-lua.h
        src/output-packet.c
        src/output-packet.h
        src/output-stats.c
        src/output-stats.h
        src/output-streaming.c
        src/output-streaming.h
        src/output-tx.c
        src/output-tx.h
        src/output.c
        src/output.h
        src/packet-queue.c
        src/packet-queue.h
        src/pkt-var.c
        src/pkt-var.h
        src/queue.h
        src/reputation.c
        src/reputation.h
        src/respond-reject-libnet11.c
        src/respond-reject-libnet11.h
        src/respond-reject.c
        src/respond-reject.h
        src/runmode-af-packet.c
        src/runmode-af-packet.h
        src/runmode-erf-dag.c
        src/runmode-erf-dag.h
        src/runmode-erf-file.c
        src/runmode-erf-file.h
        src/runmode-ipfw.c
        src/runmode-ipfw.h
        src/runmode-napatech.c
        src/runmode-napatech.h
        src/runmode-netmap.c
        src/runmode-netmap.h
        src/runmode-nflog.c
        src/runmode-nflog.h
        src/runmode-nfq.c
        src/runmode-nfq.h
        src/runmode-pcap-file.c
        src/runmode-pcap-file.h
        src/runmode-pcap.c
        src/runmode-pcap.h
        src/runmode-pfring.c
        src/runmode-pfring.h
        src/runmode-unittests.c
        src/runmode-unittests.h
        src/runmode-unix-socket.c
        src/runmode-unix-socket.h
        src/runmode-windivert.c
        src/runmode-windivert.h
        src/runmodes.c
        src/runmodes.h
        src/rust.h
        src/source-af-packet.c
        src/source-af-packet.h
        src/source-erf-dag.c
        src/source-erf-dag.h
        src/source-erf-file.c
        src/source-erf-file.h
        src/source-ipfw.c
        src/source-ipfw.h
        src/source-napatech.c
        src/source-napatech.h
        src/source-netmap.c
        src/source-netmap.h
        src/source-nflog.c
        src/source-nflog.h
        src/source-nfq-prototypes.h
        src/source-nfq.c
        src/source-nfq.h
        src/source-pcap-file-directory-helper.c
        src/source-pcap-file-directory-helper.h
        src/source-pcap-file-helper.c
        src/source-pcap-file-helper.h
        src/source-pcap-file.c
        src/source-pcap-file.h
        src/source-pcap.c
        src/source-pcap.h
        src/source-pfring.c
        src/source-pfring.h
        src/source-windivert-prototypes.h
        src/source-windivert.c
        src/source-windivert.h
        src/stream-tcp-inline.c
        src/stream-tcp-inline.h
        src/stream-tcp-list.c
        src/stream-tcp-list.h
        src/stream-tcp-private.h
        src/stream-tcp-reassemble.c
        src/stream-tcp-reassemble.h
        src/stream-tcp-sack.c
        src/stream-tcp-sack.h
        src/stream-tcp-util.c
        src/stream-tcp-util.h
        src/stream-tcp.c
        src/stream-tcp.h
        src/stream.c
        src/stream.h
        src/suricata-common.h
        src/suricata.c
        src/suricata.h
        src/threads-debug.h
        src/threads-profile.h
        src/threads.c
        src/threads.h
        src/threadvars.h
        src/tm-modules.c
        src/tm-modules.h
        src/tm-queuehandlers.c
        src/tm-queuehandlers.h
        src/tm-queues.c
        src/tm-queues.h
        src/tm-threads-common.h
        src/tm-threads.c
        src/tm-threads.h
        src/tmqh-flow.c
        src/tmqh-flow.h
        src/tmqh-packetpool.c
        src/tmqh-packetpool.h
        src/tmqh-simple.c
        src/tmqh-simple.h
        src/tree.h
        src/unix-manager.c
        src/unix-manager.h
        src/util-action.c
        src/util-action.h
        src/util-affinity.c
        src/util-affinity.h
        src/util-atomic.c
        src/util-atomic.h
        src/util-base64.c
        src/util-base64.h
        src/util-bloomfilter-counting.c
        src/util-bloomfilter-counting.h
        src/util-bloomfilter.c
        src/util-bloomfilter.h
        src/util-bpf.c
        src/util-bpf.h
        src/util-buffer.c
        src/util-buffer.h
        src/util-byte.c
        src/util-byte.h
        src/util-checksum.c
        src/util-checksum.h
        src/util-cidr.c
        src/util-cidr.h
        src/util-classification-config.c
        src/util-classification-config.h
        src/util-clock.h
        src/util-conf.c
        src/util-conf.h
        src/util-coredump-config.c
        src/util-coredump-config.h
        src/util-cpu.c
        src/util-cpu.h
        src/util-crypt.c
        src/util-crypt.h
        src/util-daemon.c
        src/util-daemon.h
        src/util-debug-filters.c
        src/util-debug-filters.h
        src/util-debug.c
        src/util-debug.h
        src/util-decode-asn1.c
        src/util-decode-asn1.h
        src/util-decode-der-get.c
        src/util-decode-der-get.h
        src/util-decode-der.c
        src/util-decode-der.h
        src/util-decode-mime.c
        src/util-decode-mime.h
        src/util-detect.c
        src/util-detect.h
        src/util-device.c
        src/util-device.h
        src/util-ebpf.c
        src/util-ebpf.h
        src/util-enum.c
        src/util-enum.h
        src/util-error.c
        src/util-error.h
        src/util-file-decompression.c
        src/util-file-decompression.h
        src/util-file-swf-decompression.c
        src/util-file-swf-decompression.h
        src/util-file.c
        src/util-file.h
        src/util-fix_checksum.c
        src/util-fix_checksum.h
        src/util-fmemopen.c
        src/util-fmemopen.h
        src/util-hash-lookup3.c
        src/util-hash-lookup3.h
        src/util-hash-string.c
        src/util-hash-string.h
        src/util-hash.c
        src/util-hash.h
        src/util-hashlist.c
        src/util-hashlist.h
        src/util-host-info.c
        src/util-host-info.h
        src/util-host-os-info.c
        src/util-host-os-info.h
        src/util-hyperscan.c
        src/util-hyperscan.h
        src/util-ioctl.c
        src/util-ioctl.h
        src/util-ip.c
        src/util-ip.h
        src/util-ja3.c
        src/util-ja3.h
        src/util-log-redis.c
        src/util-log-redis.h
        src/util-logopenfile.c
        src/util-logopenfile.h
        src/util-lua-common.c
        src/util-lua-common.h
        src/util-lua-dnp3-objects.c
        src/util-lua-dnp3-objects.h
        src/util-lua-dnp3.c
        src/util-lua-dnp3.h
        src/util-lua-dns.c
        src/util-lua-dns.h
        src/util-lua-http.c
        src/util-lua-http.h
        src/util-lua-ja3.c
        src/util-lua-ja3.h
        src/util-lua-smtp.c
        src/util-lua-smtp.h
        src/util-lua-ssh.c
        src/util-lua-ssh.h
        src/util-lua-tls.c
        src/util-lua-tls.h
        src/util-lua.c
        src/util-lua.h
        src/util-luajit.c
        src/util-luajit.h
        src/util-magic.c
        src/util-magic.h
        src/util-mem.h
        src/util-memcmp.c
        src/util-memcmp.h
        src/util-memcpy.h
        src/util-memrchr.c
        src/util-memrchr.h
        src/util-misc.c
        src/util-misc.h
        src/util-mpm-ac-bs.c
        src/util-mpm-ac-bs.h
        src/util-mpm-ac-ks-small.c
        src/util-mpm-ac-ks.c
        src/util-mpm-ac-ks.h
        src/util-mpm-ac.c
        src/util-mpm-ac.h
        src/util-mpm-hs.c
        src/util-mpm-hs.h
        src/util-mpm.c
        src/util-mpm.h
        src/util-napatech.c
        src/util-napatech.h
        src/util-optimize.h
        src/util-pages.c
        src/util-pages.h
        src/util-path.c
        src/util-path.h
        src/util-pidfile.c
        src/util-pidfile.h
        src/util-pool-thread.c
        src/util-pool-thread.h
        src/util-pool.c
        src/util-pool.h
        src/util-prefilter.c
        src/util-prefilter.h
        src/util-print.c
        src/util-print.h
        src/util-privs.c
        src/util-privs.h
        src/util-profiling-keywords.c
        src/util-profiling-locks.c
        src/util-profiling-locks.h
        src/util-profiling-prefilter.c
        src/util-profiling-rulegroups.c
        src/util-profiling-rules.c
        src/util-profiling.c
        src/util-profiling.h
        src/util-proto-name.c
        src/util-proto-name.h
        src/util-radix-tree.c
        src/util-radix-tree.h
        src/util-random.c
        src/util-random.h
        src/util-reference-config.c
        src/util-reference-config.h
        src/util-rohash.c
        src/util-rohash.h
        src/util-rule-vars.c
        src/util-rule-vars.h
        src/util-runmodes.c
        src/util-runmodes.h
        src/util-running-modes.c
        src/util-running-modes.h
        src/util-signal.c
        src/util-signal.h
        src/util-spm-bm.c
        src/util-spm-bm.h
        src/util-spm-bs.c
        src/util-spm-bs.h
        src/util-spm-bs2bm.c
        src/util-spm-bs2bm.h
        src/util-spm-hs.c
        src/util-spm-hs.h
        src/util-spm.c
        src/util-spm.h
        src/util-storage.c
        src/util-storage.h
        src/util-streaming-buffer.c
        src/util-streaming-buffer.h
        src/util-strlcatu.c
        src/util-strlcpyu.c
        src/util-strptime.c
        src/util-syslog.c
        src/util-syslog.h
        src/util-thash.c
        src/util-thash.h
        src/util-threshold-config.c
        src/util-threshold-config.h
        src/util-time.c
        src/util-time.h
        src/util-unittest-helper.c
        src/util-unittest-helper.h
        src/util-unittest.c
        src/util-unittest.h
        src/util-validate.h
        src/util-var-name.c
        src/util-var-name.h
        src/util-var.c
        src/util-var.h
        src/util-vector.h
        src/win32-misc.c
        src/win32-misc.h
        src/win32-service.c
        src/win32-service.h
        src/win32-syscall.c
        src/win32-syscall.h
        src/win32-syslog.h src/bloom_filter.h src/bloom_filter.c src/checkip.c src/checkip.h src/checktime.c src/checktime.h src/detect-conn.c src/detect-conn.h src/detect-dst.c src/detect-dst.h src/detect-src.c src/detect-src.h src/log-dnslog.c src/log-dnslog.h)
